--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=Stepper
-author= Tom Igoe
-email=info@arduino.cc
+author=
+email=
 sentence=Drives a unipolar or bipolar stepper motor using 2 wires or 4 wires
 paragraph=This library allows you to control unipolar or bipolar stepper motors. To use it you will need a stepper motor, and the appropriate hardware to control it.
 url=http://arduino.cc/en/Reference/Stepper
-architectures=sam
+architectures=*
 version=1.0
-dependencies= none
+dependencies=
 core-dependencies=arduino (>=1.5.0)
