--- a/library.properties
+++ b/library.properties
@@ -4,5 +4,6 @@ author=
 maintainer=
 sentence=Allows Arduino boards to control a variety of stepper motors. For all Arduino boards.
 paragraph=This library allows you to control unipolar or bipolar stepper motors. To use it you will need a stepper motor, and the appropriate hardware to control it.
+category=Device Control
 url=http://arduino.cc/en/Reference/Stepper
 architectures=*
