--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=Stepper
-version=1.1.3
+version=1.2.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=Allows Arduino boards to control a variety of stepper motors. 
+sentence=Allows Arduino boards to control a variety of stepper motors and stepper shields.
 paragraph=This library allows you to control unipolar or bipolar stepper motors. To use it you will need a stepper motor, and the appropriate hardware to control it.
 category=Device Control
 url=http://www.arduino.cc/en/Reference/Stepper
